修改圖片連結

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
           <td colspan="5" id="clickme">▲ mouse over me ▲</td>
         </tr>
         <tr>
-          <td><img src="../images/money.gif" /></td>
+          <td><img src="./images/money.gif" /></td>
           <td>score +1</td>
           <td width="50"></td>
-          <td><img src="../images/poo.gif" /></td>
+          <td><img src="./images/poo.gif" /></td>
           <td>score -1</td>
         </tr>
       </table>
